# servepass

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
servepass/: __main__.py
tests/: test_servepass.py
